--- a/index.html
+++ b/index.html
@@ -8,40 +8,41 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-	    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-	      <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-	        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-	        <span class="fs-4">Simple header</span>
-	      </a>
-	      <ul class="nav nav-pills">
-	        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-	        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-	        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-	        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-	        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-	      </ul>
-	    </header>
-	</div>
+
+	<header class="d-flex justify-content-center py-3 mb-4 border-bottom">
+	  <a href="#" class="d-flex align-items-center me-md-auto link-body-emphasis text-decoration-none">
+		<svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+		<span class="fs-4">Simple header</span>
+	  </a>
+  
+	  <ul class="nav nav-pills">
+		<li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+		<li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+		<li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+		<li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+		<li class="nav-item"><a href="#" class="nav-link">About</a></li>
+	  </ul>
+	</header>
 
 	<div class="album py-5 bg-body-tertiary">
     <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col">
-          <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="img/nature-1.jpg" alt="alt">
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+		<div class="col">
+			<div class="card shadow-sm">
+				<img class="bd-placeholder-img card-img-top" src="img/nature-1.jpg" alt="alt">
+				<div class="card-body">
+					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					<div class="d-flex justify-content-between align-items-center">
+						<div class="btn-group">
+							<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
+							<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
+						</div>
+						<small class="text-body-secondary">9 mins</small>
+					</div>
+				</div>
+			</div>
+		</div>
 	  
 			<div class="col">
 			  <div class="card shadow-sm">
@@ -61,39 +62,35 @@
 
 			<div class="col">
 				<div class="card shadow-sm">
-				  <div class="img-container">
 					<img class="bd-placeholder-img card-img-top" src="img/nature-1.jpg" alt="alt">
-				  </div>
-				  <div class="card-body">
-					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					<div class="d-flex justify-content-between align-items-center">
-					  <div class="btn-group">
-						<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
-						<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
-					  </div>
-					  <small class="text-body-secondary">9 mins</small>
+					<div class="card-body">
+						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+						<div class="d-flex justify-content-between align-items-center">
+							<div class="btn-group">
+								<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
+								<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
+							</div>
+							<small class="text-body-secondary">9 mins</small>
+						</div>
 					</div>
-				  </div>
 				</div>
-			  </div>
+			</div>
 
-			  <div class="col">
+			<div class="col">
 				<div class="card shadow-sm">
-				  <div class="img-container">
 					<img class="bd-placeholder-img card-img-top" src="img/nature-1.jpg" alt="alt">
-				  </div>
-				  <div class="card-body">
-					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					<div class="d-flex justify-content-between align-items-center">
-					  <div class="btn-group">
-						<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
-						<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
-					  </div>
-					  <small class="text-body-secondary">9 mins</small>
+					<div class="card-body">
+						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+						<div class="d-flex justify-content-between align-items-center">
+							<div class="btn-group">
+								<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
+								<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
+							</div>
+							<small class="text-body-secondary">9 mins</small>
+						</div>
 					</div>
-				  </div>
 				</div>
-			  </div>
+			</div>
 		
 			  <div class="col">
 				<div class="card shadow-sm">
@@ -112,28 +109,27 @@
 			  </div>
   
 			  <div class="col">
-				  <div class="card shadow-sm">
-					<div class="img-container">
-					  <img class="bd-placeholder-img card-img-top" src="img/nature-1.jpg" alt="alt">
-					</div>
+				<div class="card shadow-sm">
+					<img class="bd-placeholder-img card-img-top" src="img/nature-1.jpg" alt="alt">
 					<div class="card-body">
-					  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					  <div class="d-flex justify-content-between align-items-center">
-						<div class="btn-group">
-						  <button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
-						  <button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
+						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+						<div class="d-flex justify-content-between align-items-center">
+							<div class="btn-group">
+								<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-1">View</button>
+								<button type="button" class="btn btn-sm btn-outline-secondary" data-target="#modalSheet-2">Edit</button>
+							</div>
+							<small class="text-body-secondary">9 mins</small>
 						</div>
-						<small class="text-body-secondary">9 mins</small>
-					  </div>
 					</div>
-				  </div>
 				</div>
+			</div>
 		  </div>
 		</div>
 	  </div>
 
   <div class="container mt-5">
 	  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+		
 	      <div class="col">
 	        <div class="card mb-4 rounded-3 shadow-sm">
 	          <div class="card-header py-3">
@@ -188,8 +184,10 @@
 	          </div>
 	        </div>
 	      </div>
+
 	    </div>
     </div>
+	
 	<div id="menu"></div> 
 
 	<div class="modal fade" id="modalSheet-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
